<resources>
    <string name="app_name">Movie App</string>
    <string name="see_all">See all</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search_hint">Search…</string>
    <string name="movies_chip">Movies</string>
    <string name="tv_shows_chip">TV Shows</string>
    <string name="actors_label">Actors</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="place_of_birth">place of Birth</string>
    <string name="konwn_for">Known For</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="actors">Actors</string>
    <string name="oops">Oops!</string>
    <string name="description">There is no internet connection\nPlease check it out</string>
    <string name="all_movies_of_actor">All Movies Of Actor</string>
    <string name="title_on_air">On The Air</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_mystery">Mystery</string>
    <string name="title_adventure">Adventure</string>
    <string name="title_trending">Trending</string>
    <string name="title_streaming">Now Streaming</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_matches_your_vibe">Matches Your Vibe</string>
    <string name="title_featured_collection">Featured Collections</string>
    <string name="late_night_thrills">Late-Night Thrills</string>
    <string name="mind_bending_stories">Mind-Bending Stories</string>
    <string name="cinematic_masterpieces">Cinematic Masterpieces</string>
    <string name="family_night_picks">Family Night Picks</string>
    <string name="based_on_true_events">Based on True Events</string>
    <string name="feel_good_favorites">Feel-Good Favorites</string>
    <string name="title_celebrity">Celebrities</string>
    <string name="title_airing_today">Airing today</string>
    <string name="title_your_collections">Your Collections</string>
    <string name="title_top_rated_tv_show">Top Rated Tv-Show</string>
    <string name="text_movies">%s Movies</string>
    <string name="movies_label">Movies</string>
    <string name="tv_shows_label">TV Shows</string>
    <string name="history_label">History</string>
    <string name="explore_label">Explore</string>
    <string name="trending_today_label">Trending Today</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="myList">My Lists</string>
    <string name="profile">Profile</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="duration">%1$d Minutes</string>
    <string name="reviews">(%1$s reviews)</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="rate_the_movie">Rate The Movie</string>
    <string name="reviews_title">Reviews</string>
    <string name="review">Reviews</string>
    <string name="reviews_comment">Reviews</string>
    <string name="user_name">"@" %1$s</string>
    <string name="back_button">back button</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="submit_toast">Submitted, Thank you for your feedback</string>
    <string name="total_episodes">%1$s Episodes</string>
    <string name="me">me</string>
    <string name="watch_history">Watch History</string>
    <string name="rated_movies">My Ratings</string>
    <string name="sign_out">Sign Out</string>
    <string name="at">\@</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="cancel">Cancel</string>
    <string name="signout">Sign Out</string>
    <string name="this_list_has_no_movies">This list has no movies</string>
    <string name="zero">\.0</string>
    <string name="my_ratings">My Ratings</string>
    <string name="items">%1$s Items</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="list_name">List Name</string>
    <string name="explore_some_movies_on_home_or_search_and_then_create_your_movie_list">Explore some movies on “Home” or “Search” and then create your movie list.</string>
    <string name="empty_overview_text">This season has no description.</string>
    <string name="one_season">%1$d Season</string>
    <string name="more_than_one_season">%1$d Seasons</string>
    <string name="internet_connection">There is no internet connection.</string>
    <string name="retry">Retry</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="new_list">New List</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>
    <string name="empty">Empty</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="save_to">Save to…</string>
    <string name="hours_pattern">%1$s hours</string>
    <string name="minutes_pattern">%1$s minutes</string>
    <string name="hours_minutes_pattern">%1$s h %2$s m</string>
    <string name="you_must_be_logged_in_to_save_a_movie">You must be logged in to save a movie</string>
    <string name="this_list_has_no_lists">No lists found</string>
    <string name="episode_title">%1$d. %2$s</string>
    <string name="season_number">(%1$s Seasons)</string>
    <string name="bookmark">Bookmark</string>
    <string name="icon">icon</string>
    <string name="info_section">section info\n</string>
    <string name="button">Button</string>
    <string name="label">label</string>
    <string name="series">Series</string>
    <string name="movie">movie</string>
    <string name="settings">Settings</string>
    <string name="dark_mode_icon">Dark mode icon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="content_preferences">Content Preferences</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="my_collections">My Collections</string>
    <string name="enter_your_email_or_username">Enter your email or username</string>
    <string name="welcome_back_to_cinaverse">Welcome back to CinaVerse!</string>
    <string name="forget_password">Forget Password?</string>
    <string name="join_as_a_guest">Join as a Guest</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="match">Match</string>
    <string name="actor_placeholder">Actor placeholder</string>
    <string name="no_img">No Img</string>
    <string name="actor_name">Actor Name</string>
    <string name="go_to_website">Go to Website</string>
    <string name="show_more">Show More</string>
    <string name="gallery">Gallery</string>
    <string name="released_date">Released Date</string>
    <string name="try_again">Try Again</string>
    <string name="join_cineverse">Join CineVerse</string>
    <string name="arrow">arrow</string>
    <string name="star_circlr_shape">star circlr shape</string>
    <string name="let_the_world_lnow_how_you_felt">Let the world lnow how you felt</string>
    <string name="let_s_get_you_set_up_we_ll_take_you_to_the_website_to_create_your_account">Let\'s get you set up! We\'ll take you to the website to create your account.</string>
    <string name="did_you_watch_it">Did you watch it?</string>
    <string name="give_it_stars">Give it Stars</string>
    <string name="rating">rating</string>
    <string name="what_mood_are_you_in">What mood are you in?</string>
    <string name="next">Next</string>
    <string name="start_matching">Start Matching</string>
    <string name="loading_recommendations_you_ll_love">Loading recommendations you’ll love...</string>
    <string name="storyline">Storyline</string>
    <string name="what_should_i_watch">What Should I Watch?</string>
    <string name="oops_no_internet">Oops! No Internet</string>
    <string name="looks_like_you_re_offline_let_s_reconnect_so_nyou_don_t_miss_out">Looks like you\'re offline. Let\'s reconnect so\nyou don\'t miss out!</string>
    <string name="welcome_to_your_movie_universe">Welcome to your movie universe</string>
    <string name="discover_track_and_rate_your_favorite_movies_series">Discover, track, and rate your favorite\n movies &amp; series.</string>
    <string name="track_everything">Track everything</string>
    <string name="your_watchlist_your_ratings_all_in_one_place">Your Watchlist. Your Ratings. All in One\n Place.</string>
    <string name="personalized_recommendations">Personalized recommendations</string>
    <string name="answer_fun_questions_to_get_handpicked_recommendations">Answer fun questions to get handpicked\n recommendations.</string>
    <string name="get_started">Get Started</string>
    <string name="onboarding_image_description">OnBoarding Image</string>
    <string name="discover_track_and_rate_your_favorite_movies_and_series">Discover, track and rate your favorite movies and series</string>
    <string name="select_movies_or_series_tab">Select Movies or Series tab</string>
    <string name="logo">logo</string>
    <string name="you_gave_it">You gave it</string>
    <string name="view_details">View Details</string>
    <string name="answer_a_few_quick_questions_and_we_ll_match_you_with_the_perfect_picks">Answer a few quick questions and we’ll match you with the perfect picks.</string>
    <string name="not_sure_what_to_watch">Not sure what to watch?</string>
    <string name="movie_title">Movie</string>
    <string name="add">add</string>
    <string name="discover_your_match">Discover Your Match</string>
    <string name="let_us_choose_for_you">Let Us Choose For You!</string>
    <string name="we_ll_help_you_skip_the_scroll_and_go_straight_to_the_good_stuff">We’ll help you skip the scroll and go straight to the good stuff.</string>
    <string name="no_collections_yet">No Collections Yet</string>
    <string name="start_building_your_personal_library_by_saving_movies_or_series_you_want_to_remember">Start building your personal library by saving movies or series you want to remember.</string>
    <string name="start_collecting">Start Collecting</string>
    <string name="no_history_yet">No History Yet</string>
    <string name="it_s_quiet_in_here_start_watching_and_we_ll_keep_track_for_you">It’s quiet in here… Start watching and we’ll keep track for you.</string>
    <string name="no_ratings_yet">No Ratings Yet</string>
    <string name="rate_movies_and_series_you_ve_watched_to_track_what_you_love_and_what_you_don_t">Rate movies and series you’ve watched to track what you love, and what you don’t.</string>
    <string name="start_rating">Start Rating</string>
    <string name="find_something_to_watch">Find Something to Watch</string>
    <string name="my_profile">My Profile</string>
    <string name="my_collection">My Collection</string>
    <string name="welcome">Welcome</string>
    <string name="exit">exit</string>
    <string name="create_new_collection">Create New Collection</string>
    <string name="collection_name">Collection Name</string>
</resources>