<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_screen">
        <com.karrar.movieapp.ui.components.header.AppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:AppBarTitle="@string/discover_your_match"
            app:showIcon="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.match.MatchScreenFragment">

            <LinearLayout
                android:id="@+id/panel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:elevation="6dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:outlineProvider="background"
                android:paddingStart="20dp"
                android:paddingTop="56dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/Typography.title_sm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/not_sure_what_to_watch"
                    android:textColor="@color/shade_primary" />

                <TextView
                    android:id="@+id/tvSubtitle"
                    style="@style/Typography.body_sm_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:gravity="center"
                    android:text="@string/answer_a_few_quick_questions_and_we_ll_match_you_with_the_perfect_picks"
                    android:textColor="@color/shade_secondary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startButton"
                    style="@style/Typography.body_sm_medium"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/start_matching"
                    android:textColor="@color/white_primary"
                    app:backgroundTint="@color/button_primary"
                    app:cornerRadius="@dimen/radius_md" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/bg_circle_tertiary"
                android:contentDescription="@string/match"
                android:elevation="8dp"
                android:padding="18dp"
                android:src="@drawable/ic_magic_stick_colored"
                android:translationY="32dp"
                app:layout_constraintBottom_toTopOf="@id/panel"
                app:layout_constraintEnd_toEndOf="@id/panel"
                app:layout_constraintStart_toStartOf="@id/panel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>